Reduce meme font size so it doesn't overtake image. Change height/width values to prevent image stretching. Change size and position of deleteSpan.

--- a/style.css
+++ b/style.css
@@ -116,24 +116,27 @@ input {
   align-items: center;
   position: relative;
   width: 300px; /* Ensures consistent size */
+  height: 300px;
 }
 
 /*Result of the inputs combined*/
 
-img {
-  height: 300px;
-  width: 300px;
-  display: block;
-  position: relative;
+.meme-gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image fills the container without distortion */
+  aspect-ratio: 1 / 1; /* Maintains a square aspect ratio */
+  border-radius: 5px;
 }
+
 
 span {
   position: absolute;
-  top: 8px;
-  right: 16px;
+  top: 6px;
+  right: 14px;
   color: var(--page-text);
   font-family: impact;
-  font-size: 2.5em;
+  font-size: 1.5em;
   cursor: pointer;
 }
 
@@ -141,7 +144,7 @@ span {
 .top-text, .bottom-text {
   position: absolute;
   font-family: impact;
-  font-size: 2.5em;
+  font-size: 2.0em;
   text-transform: uppercase;
   color: white;
   letter-spacing: 1px;
